--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.2",
     "@types/ws": "^8.18.1",
+    "express": "^5.1.0",
     "ws": "^8.18.2"
   }
 }
